<resources>
    <string name="app_name">Prime Video</string>
    <string name="prime_video">Prime Video</string>
    <string name="all">All</string>
    <string name="store">Store</string>
    <string name="home">Home</string>
    <string name="live_tv">Live Tv</string>
    <string name="downloads">Downloads</string>
    <string name="find">Find</string>
    <string name="movies">Movies</string>
    <string name="tvShows">Tv Shows</string>
    <string name="primeRecommendedMovies"><font color="#146eb4">Prime</font> <font color="#ffffff">- Recommended movies</font></string>
    <string name="watchInYourLanguage"><font color="#146eb4">Prime</font> <font color="#ffffff">- Watch in Your Language</font></string>
    <string name="newRelease"><font color="#ffbf00">New release movies</font></string>
    <string name="amazonOriginal"><font color="#146eb4">Prime</font> <font color="#ffffff">- Amazon Original series</font></string>
    <string name="actionAdventure"><font color="#146eb4">Prime</font> <font color="#ffffff">- Action &amp; Adventure movies</font></string>
    <string name="topRatedMovies"><font color="#146eb4">Prime</font> <font color="#ffffff">- Top-rated movies on IMDb</font></string>
    <string name="latestMovies"><font color="#146eb4">Prime</font> <font color="#ffffff">- Latest Movies</font></string>
    <string name="topMovies"><font color="#146eb4">Prime</font> <font color="#ffffff">- Top Movies</font></string>

    <string name="todo">TODO</string>
    <string name="include_with_prime">Include with Prime</string>
    <string name="title">Title</string>
    <string name="download">Download</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="watchlist">Watchlist</string>
    <string name="description">Super-Hero partners Scott Lang and Hope van Dyne, along with Hope\'s parents Janet van Dyne and Hank Pym, and Scott\'s daughter Cassie Lang, find themselves exploring the Quantum Realm, interacting with strange new creatures and embarking on an adventure that will push them beyond the limits of what they thought possible.
</string>
    <string name="watch_party">Watch Party</string>
    <string name="imdb">IMDB</string>
    <string name="imdb_ratting">6.3</string>
    <string name="year">2019</string>
    <string name="min">102 min</string>
    <string name="ua">U/A 13+</string>
    <string name="related">Related</string>
    <string name="moreDetail">More Detail</string>
    <string name="tvCustomerAlsoWatches">Customers Also Watched</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="cast_name">Cast Name</string>
    <string name="director">Director</string>
    <string name="director_description">Director Description</string>
    <string name="know_for">Know for:</string>
    <string name="know_for_description">Know Description</string>
    <string name="genres">Genres</string>
    <string name="genres_description">Genres Description</string>
    <string name="starring">Starring</string>
    <string name="starring_description">Starring Description</string>
    <string name="supportive_actor">Supportive Actor</string>
    <string name="supportive_actor_description">Supportive Actor Description</string>
    <string name="studios">Studios</string>
    <string name="studios_description">Studios Description</string>
    <string name="content_adv">Content advisory</string>
    <string name="Content_description">Content Description</string>
    <string name="customer_reviews">Customer reviews</string>
    <string name="customer_reviews_description">We don\'t have any customer reviews</string>
    <string name="categories">Categories</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>